Ajuste de responsividade e versão

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.300",
     "react-router-dom": "^6.8.1",
     "react-slick": "^0.29.0",
-    "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "three": "^0.149.0"
